# C214_CI_Seminario

./: .gitignore  README.md  carrinhoCompras.py  cliente.py  main.py  produto.py  pyproject.toml  requirements.txt  test_CarrinhoCompras.py
.github/workflows/: python-app.yml
artifacts/: TestResults___main__.TestCarrinhoCompras_2023-05-31_14-52-54.html
