[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carrinhocompraTHIAGOMIGUEL7"
version = "0.0.1"
authors = [
  { name = "Thiago", email = "thiago.miguel@gec.inatel.com" }
]

description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/ThiagoMiguel7/C214_CI_Seminario"
bug-tracker = "https://github.com/ThiagoMiguel7/C214_CI_Seminario"

